[gd_scene load_steps=4 format=2]

[ext_resource path="res://Segments/CoinChain/Coin/gold_coin_round_star_1.png" type="Texture" id=1]
[ext_resource path="res://Segments/CoinChain/Coin/Coin.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Coin" type="Area2D"]
script = ExtResource( 2 )

[node name="CoinImage" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Coin_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Coin_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
